Updates swagger tags
