# docs/swagger.yaml
@@ -82,7 +82,6 @@ paths:
               type: string
             type: array
       tags:
-      - root
       - categories
   /categories/:name:
     get:
@@ -101,7 +100,6 @@ paths:
             type: array
       summary: Get All Tricks Grouped Under A Category from TrickingApi/data/tricks
       tags:
-      - root
       - categories
       - tricks
   /categories/tricks:
@@ -123,7 +121,6 @@ paths:
             type: object
       summary: Get All Tricks Grouped by Categories from TrickingApi/data/tricks
       tags:
-      - root
       - categories
       - tricks
   /tricks:
@@ -143,7 +140,7 @@ paths:
             type: array
       summary: Get All Tricks from TrickingApi/data/tricks
       tags:
-      - root
+      - tricks
   /tricks/names:
     get:
       consumes:
@@ -161,8 +158,7 @@ paths:
             type: array
       summary: Get All Trick Names from TrickingApi/data/tricks
       tags:
-      - root
-      - names
+      - tricks
   /tricks:name:
     get:
       consumes:
@@ -183,7 +179,6 @@ paths:
       summary: Get Trick by Specific Name from TrickingApi/data/tricks
       tags:
       - tricks
-      - name
 schemes:
 - https
 swagger: "2.0"
